# camp

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/camp_ast/: Cargo.toml
crates/camp_ast/src/: attr.rs  error.rs  expr.rs  function.rs  item.rs  lib.rs  misc.rs  pat.rs  path.rs  punctuated.rs  result.rs  tok.rs  ty.rs  ui_test.rs
crates/camp_ast_lower/: Cargo.toml
crates/camp_ast_lower/src/: ast.rs  item.rs  lang_item.rs  lib.rs  path.rs  resolver.rs  result.rs  ty.rs
crates/camp_diagnostic/: Cargo.toml
crates/camp_diagnostic/src/: lib.rs
crates/camp_driver/: Cargo.toml
crates/camp_driver/src/: codespan.rs  lib.rs  result.rs
crates/camp_files/: Cargo.toml
crates/camp_files/src/: codespan.rs  error.rs  lib.rs  result.rs
crates/camp_hir/: Cargo.toml
crates/camp_hir/src/: hir.rs  item.rs  lang_item.rs  lib.rs  resolve.rs  resolver.rs  result.rs  ty.rs
crates/camp_hir/src/hir/: item.rs  mod.rs  path.rs  ty.rs
crates/camp_import_resolve/: Cargo.toml
crates/camp_import_resolve/src/: items.rs  lib.rs  resolve.rs  result.rs
crates/camp_lex/: Cargo.toml
crates/camp_lex/src/: error.rs  lib.rs  result.rs  tok.rs
crates/camp_parse/: Cargo.toml
crates/camp_parse/src/: attr.rs  error.rs  expr.rs  function.rs  item.rs  lib.rs  parser.rs  pat.rs  path.rs  punctuated.rs  result.rs  tok.rs  ty.rs  ui_test.rs
crates/camp_parse/src/ast/: attr.rs  expr.rs  function.rs  item.rs  misc.rs  mod.rs  pat.rs  path.rs  ty.rs
crates/camp_parse/src/parser/: mod.rs  punctuated.rs  tok_macros.rs
crates/camp_util/: Cargo.toml
crates/camp_util/src/: id.rs  iterator_ext.rs  lib.rs  result.rs  span.rs  ui_test.rs
src/: error.rs  files.rs  main.rs  result.rs  ui_test.rs  util.rs
src/lexer/: mod.rs  tok.rs
src/parser/: ast.rs  expr.rs  item.rs  misc.rs  mod.rs  oxia.lalrpop  pat.rs  tok.rs  ty.rs  ui_test.rs
std/: clone.camp  lib.camp  marker.camp
ui_test/parser/fail/: cannot_call_cast.camp  cannot_call_cast.err  duplicate.camp  duplicate.err  example.camp  example.err  impl_viz.camp  impl_viz.err  let_expr.camp  let_expr.err  unexpected_attr.camp  unexpected_attr.err  visibility.camp  visibility.err
ui_test/parser/pass/: attrs.camp  attrs.out  cast_add.camp  cast_add.out  example.camp  example.out  extern_camp.camp  extern_camp.out  many_operators.camp  many_operators.out  multi_module.camp  multi_module.out  parameter_kinds.camp  parameter_kinds.out  precedence.camp  precedence.out  visibility.camp  visibility.out
ui_test/verify/fail/: import_from_variant.camp
ui_test/verify/pass/: enum.camp  glob_passes.camp  glob_shadow.camp  just_a_struct.camp
