[package]
name = "camp"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    "crates/camp_util",
    "crates/camp_diagnostic",
    "crates/camp_files",
    "crates/camp_lex",
    "crates/camp_parse",
    "crates/camp_ast",
]

[dependencies]
camino = "1.0.5"
camp_ast = { path = "crates/camp_ast" }
camp_diagnostic = { path = "crates/camp_diagnostic" }
camp_files = { path = "crates/camp_files" }
camp_lex = { path = "crates/camp_lex" }
camp_util = { path = "crates/camp_util" }
codespan-derive = "0.1.0"
codespan-reporting = "0.11.1"
log = "0.4.14"
simple_logger = "1.13.0"
structopt = "0.3.22"
termcolor = "1.1.2"
