[package]
name = "camp"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    "crates/camp_driver",
    "crates/camp_util",
    "crates/camp_files",
    "crates/camp_lex",
    "crates/camp_parse",
    # "crates/camp_import_resolve",
]

[dependencies]
camino = "1.0.5"
camp_parse = { path = "crates/camp_parse" }
camp_driver = { path = "crates/camp_driver" }
codespan-derive = "0.1.1"
codespan-reporting = "0.11.1"
log = "0.4.14"
simple_logger = "1.13.0"
structopt = "0.3.23"
termcolor = "1.1.2"
