[package]
name = "camp"
version = "0.1.0"
edition = "2018"
exclude = ["ui_test", "std"]

[workspace]
members = [
    "crates/camp_driver",
    "crates/camp_util",
    "crates/camp_files",
    "crates/camp_lex",
    "crates/camp_parse",
    "crates/camp_import_resolve",
    "crates/camp_hir",
    "crates/camp_ast",
]

[dependencies]
camino = "1.0.5"
camp_driver = { path = "crates/camp_driver" }
codespan-derive = "0.1.1"
codespan-reporting = "0.11.1"
log = "0.4.14"
structopt = "0.3.25"
termcolor = "1.1.2"
env_logger = "0.9.0"
