[package]
name = "camp_ast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.5"
camp_diagnostic = { path = "../camp_diagnostic" }
camp_files = { path = "../camp_files" }
camp_lex = { path = "../camp_lex" }
camp_parse = { path = "../camp_parse" }
camp_util = { path = "../camp_util" }
codespan-derive = "0.1.0"
derivative = "2.2.0"

[features]
ignore_spans = []
