[package]
name = "camp_ast"
version = "0.1.0"
edition = "2018"

[dependencies]
camino = "1.0.5"
camp_files = { path = "../camp_files" }
camp_lex = { path = "../camp_lex" }
camp_util = { path = "../camp_util" }
codespan-derive = "0.1.1"
derivative = "2.2.0"
paste = "1.0.6"
salsa = "0.16.1"

[features]
ignore_ids = []
