[package]
name = "camp_ast_lower"
version = "0.1.0"
edition = "2021"

[dependencies]
camp_ast = { path = "../camp_ast" }
camp_import_resolve = { path = "../camp_import_resolve" }
camp_parse = { path = "../camp_parse" }
camp_hir = { path = "../camp_hir" }
camp_util = { path = "../camp_util" }
codespan-derive = "0.1.1"
maplit = "1.0.2"
salsa = "0.16.1"
