[package]
name = "camp_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.0.5"
camp_parse = { path = "../camp_parse" }
camp_files = { path = "../camp_files" }
codespan-derive = "0.1.1"
codespan-reporting = "0.11.1"
salsa = "0.16.1"
camp_lex = { path = "../camp_lex" }
camp_import_resolve = { path = "../camp_import_resolve" }

[features]
ignore_ids = ["camp_parse/ignore_ids"]
