[package]
name = "camp_parse"
version = "0.1.0"
edition = "2018"

[dependencies]
camino = "1.0.5"
camp_ast = { path = "../camp_ast" }
camp_files = { path = "../camp_files" }
camp_lex = { path = "../camp_lex" }
camp_util = { path = "../camp_util" }
codespan-derive = "0.1.1"
derivative = "2.2.0"
log = "0.4.14"
paste = "1.0.6"
salsa = "0.16.1"

[features]
ignore_ids = []
